회원관리 구현중 mainActivity 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         </activity>
         <activity android:name=".Join"/>
         <activity android:name=".Login"/>
+        <activity android:name=".Member"/>
     </application>
 
 </manifest>
