--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity android:name=".Join"/>
         <activity android:name=".Login"/>
         <activity android:name=".Member"/>
+        <activity android:name=".MovieInfo"/>
     </application>
 
 </manifest>
