수정 삭제 구현-삭제시 남아있고 수정시 반영안됨 버그

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         <activity android:name=".Login"/>
         <activity android:name=".Member"/>
         <activity android:name=".MovieInfo"/>
+        <activity android:name=".MovieInfoDetailView"/>
+        <activity android:name=".MovieModify"/>
     </application>
 
 </manifest>
